--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</article>
 					</div>
 				</section>
-				<!-- Ajout de la section membre -->
+				<!-- Ajout de la section membre 12/05/2025 -->
 				<section class="sectionLinearGradientBackground whiteContentSection">
 					<h2>Les membres fondateurs</h2>
 					<div class="directionRow">
@@ -60,9 +60,12 @@
 						</article>
 					</div>
 				</section>
-				<section>
-					<div class="directionRow">
-						<a class="button buttonDrakGreyColor" href="documents/planning">Télécharger le planning de cours</a>
+				<!-- Mise à jour des liens plannings 12/05/2025 -->
+				<section class="sectionLightGreyBackground">
+					<h2>Découvrez nos cours !</h2>
+					<div class="directionColumn">
+						<a class="button buttonMainColor buttonRounded buttonHighlight" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
+						<a class="button buttonSecondColor buttonRounded buttonHighlight" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
 					</div>
 				</section>
 			</main>
